# you-sayed-idk-

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  main.rs
.githooks/: pre-commit
.github/workflows/: ci.yml
i18n/: ar.toml  bn.toml  en.toml  es.toml  hi.toml  ja.toml  pa.toml  pt.toml  ru.toml  zh.toml
src/: checks.rs  commands.rs  main.rs  print.rs  prompt.rs  translations.rs
