[package]
name = "you-sayed-idk-"
version = "1.0.0"
edition = "2024"
description = "A simple Rust program that detects variations of 'idk' in user input."
license = "MIT"
repository = "https://github.com/uictorius/you-sayed-idk-"
documentation = "https://github.com/uictorius/you-sayed-idk-/blob/main/README.md"
homepage = "https://github.com/uictorius/you-sayed-idk-"

[dependencies]
colored = "2"
locale_config = "0.3.0"
toml = "0.9.8"

[package.metadata.alias]
fmt = "fmt --all"

[package.metadata.release]
sign-tag = true
push = true
tag-prefix = ""
