[package]
name = "you-sayed-idk-"
version = "2.0.1"
edition = "2024"
description = "A Rust-based command-line shell that integrates system command execution (like ls and echo) with unique text recognition features (like variations of 'idk')."
license = "MIT"
repository = "https://github.com/uictorius/you-sayed-idk-"
documentation = "https://github.com/uictorius/you-sayed-idk-/blob/main/README.md"
homepage = "https://github.com/uictorius/you-sayed-idk-"

[dependencies]
colored = "2"
locale_config = "0.3.0"
toml = "0.9.8"

[package.metadata.alias]
fmt = "fmt --all"

[package.metadata.release]
sign-tag = true
push = true
tag-prefix = "v"
